syntax = "proto3";

package feed;

// Specify the Go package where this code will be generated.
option go_package = "./api/gen/feed;feed";

import "google/protobuf/empty.proto";

// The Feed service definition.
service Feed {
  rpc GetStatus(google.protobuf.Empty) returns (StatusResponse);

  rpc StreamData(StreamRequest) returns (stream DataResponse);

  rpc GetHistoricalData(HistoryRequest) returns (HistoryResponse);
}

message StatusResponse {
  string status = 1;
  int64 timestamp = 2;
}

message StreamRequest {
  int32 stream_id = 1;
}

message DataResponse {
  string data = 1;
  int64 timestamp = 2;
}

message HistoryRequest {
  int64 from_date = 1;
  int64 to_date = 2;
}

message HistoryResponse {
  repeated DataPoint data_points = 1;
}

message DataPoint {
  string data = 1;
  int64 timestamp = 2;
}